<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".details.CallActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/ic_finished">
    </ImageView>

    <TextView
        android:id="@+id/thanks_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_1_textView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="70dp"
        android:fontFamily="serif"
        android:textSize="20dp"
        android:textColor="@color/blackTextColor">
    </TextView>

    <TextView
        android:id="@+id/thanks_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_2_textView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="85dp"
        android:textSize="20dp"
        android:fontFamily="serif"
        android:textColor="@color/blackTextColor">
    </TextView>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="+996 555 55 55 55"
        android:layout_marginLeft="60dp"
        android:textSize="35dp"
        android:fontFamily="serif"
        android:textColor="@color/blackTextColor">
    </TextView>



    <Button
        android:id="@+id/callButton"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="90dp"
        android:text="@string/call_button"
        android:textColor="@color/colorAccent"
        android:fontFamily="serif"
        android:background="@drawable/call_rounded_button">
    </Button>

    <Button
        android:id="@+id/allOrdersButton"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/all_orders_button"
        android:textColor="@color/blackTextColor"
        android:background="@drawable/yellow_rounded_button">
    </Button>





</LinearLayout>