<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".login.LoginActivity">


    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/ic_asset_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="ГРУЗОВОЗ"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView"
        android:fontFamily="serif">


    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:id="@+id/phone_text_field"
        android:layout_width="328dp"
        android:layout_height="80dp"
        android:layout_marginTop="53dp"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/login_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:singleLine="true"
            android:layout_height="56dp"
            android:inputType="number"
            android:hint="@string/hint_phone"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="90dp"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/login_text_field"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textColorPrimary"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text_field"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="244dp"
        android:layout_height="50dp"
        android:layout_marginBottom="83dp"
        android:background="@drawable/login_rounded_button"
        android:fontFamily="serif"
        android:text="@string/login_text"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>